--- a/scss/base/_icons.scss
+++ b/scss/base/_icons.scss
@@ -28,6 +28,7 @@ $fa-exclamation-circle: f06a;
 $fa-eye: f06e;
 $fa-eye-slash: f070;
 $fa-exclamation-triangle: f071;
+$fa-folder: f07b; // folder resource
 $fa-folder-open: f07c; // social annotation files in infobox
 $fa-comments: f086;
 $fa-trophy: f091;
@@ -56,6 +57,7 @@ $fa-pencil: f303;
 $fa-expand-arrows-alt: f31e; // view only section X in CT format
 $fa-clipboard: f328;
 $fa-arrows-alt-h: f337; // to indicate wide table
+$fa-external-link-alt: f35d; // external link
 $fa-cloud-upload-alt: f382;
 $fa-microphone-alt: f3c9;
 $fa-window-close: f410;
