--- a/scss/components/_embed.scss
+++ b/scss/components/_embed.scss
@@ -117,7 +117,7 @@
     .download-transcript {
       margin: 0 !important;
       &:focus {
-        outline: $pearl-grey auto 1px !important;
+        // outline: $pearl-grey auto 1px !important;
       }
     }
     & > ::before {
