--- a/scss/layout/_navigation.scss
+++ b/scss/layout/_navigation.scss
@@ -1,22 +1,38 @@
 /* Navigation
    ======================== */
 
+// see Book for Book pagination
+
 // hide last modified date
 .modified {
   display: none;
 }
 
 %navcontainer {
-  display: flex;
-  margin-top: $component-margin-lg;
+  margin-top: $component-margin;
   margin-bottom: $component-margin-bottom-lg !important;
   padding: 0;
+  border-bottom: 1px solid $pearl-grey;
+  @media only screen and (min-width: $neo-breakpoint) {
+    display: flex;
+    margin-bottom: 0 !important;
+    border-bottom: none;
+  }
   %navtextcontainer {
-    flex: 1;
-    top: 0;
-    transform: none;
-    max-width: 50%;
-    position: initial;
+    display: block;
+    width: 100%;
+    margin: 0;
+    float: none;
+    // add margin between prev/next links on mobile
+    & > :first-child {
+      margin-bottom: $component-margin-bottom;
+    }
+    @media only screen and (min-width: $neo-breakpoint) {
+      // add margin between prev/next links on mobile
+      & > :first-child {
+        margin-bottom: 0;
+      }
+    }
   }
   %navtext {
     position: relative;
@@ -31,6 +47,10 @@
     color: $midnight-blue !important;
     background-color: transparent !important;
     box-shadow: none;
+    border-radius: 0 !important;
+    // to allow for focus outline to
+    // wrap text and button
+    min-height: 37px;
     &%navtext-prev {
       left: 0;
       padding-right: 0.75rem !important;
@@ -41,7 +61,7 @@
       right: 0;
       padding-right: 3.25rem !important;
       padding-left: 0.75rem !important;
-      text-align: left;
+      text-align: right;
     }
     @media only screen and (min-width: $neo-breakpoint) {
       padding: 0.25rem 3rem 0 3rem !important;
@@ -80,11 +100,18 @@
 // activity navigation
 .activity-navigation {
   @extend %navcontainer;
+  margin-top: $component-margin-lg;
   .row {
+    display: block;
     width: 100%;
-    justify-content: space-between;
-    align-items: flex-start;
     margin: 0 !important;
+    padding-top: $component-padding;
+    border-top: 1px solid $pearl-grey;
+    @media only screen and (min-width: $neo-breakpoint) {
+      display: flex;
+      justify-content: space-between;
+      align-items: flex-start;
+    }
     .col-md-4 {
       padding: 0;
       @extend %navtextcontainer;
@@ -120,29 +147,33 @@
 // section navigation
 .course-content .single-section .section-navigation.mdl-bottom {
   @extend %navcontainer;
+  border-top: 1px solid $pearl-grey;
+  margin-top: $component-margin-lg;
+  padding-top: $component-padding;
+  min-height: 78px;
   .mdl-left,
   .mdl-right {
     @extend %navtextcontainer;
     a {
       @extend %navtext;
+      @include focus-outline;
+      min-height: 42px;
     }
   }
   .mdl-left {
     a {
-      padding-left:3rem;
+      padding-left: 3.25rem;
       &::before {
         @extend %navbutton;
-          left: 0;
       }
     }
   }
   .mdl-right {
     a {
       text-align: right;
-      padding-right:3rem;
+      padding-right: 3.25rem;
       &::after {
         @extend %navbutton;
-          right: 0;
       }
     }
   }
